--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <div class="container">
             <div class="containerhpi">
-                <h1 class="containerheader">Brand New <br> Group of Architects</h1>
+                <h1 class="containerheader"><span class="marginleft">Brand New</span><br> Group of Architects</h1>
 
                 <p class="containerpara">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in </p>
                 <p>some form, by injected humour, or randomised words which don't look even</p>
@@ -184,14 +184,42 @@
             </div>
         </div>
 
+        <div class="sponsors">
+            <div class="oursponsors">
+                <h1 class="sponsorheader">Our Sponsors</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but 
+                </p>
+                <p>the majority have suffered alteration.
+                </p>
+            </div>
+
+            <div class="sponsoricon">
+                <div>
+                    <img class="sponosorimage" src="images/sponsors/spotify.png" alt="">
+                </div>
+                <div>
+                    <img class="sponosorimage" src="images/sponsors/amazon.png" alt="">
+                </div>
+                <div>
+                    <img class="sponosorimage" src="images/sponsors/google.png" alt="">
+                </div>
+                <div>
+                    <img class="sponosorimage" src="images/sponsors/telerama.png" alt="">
+                </div>
+                <div>
+                    <img class="sponosorimage" src="images/sponsors/figma.png" alt="">
+                </div>
+
+            </div>
+        </div>
+
         
     </menu>
 <!-- menu end -->
 
 <!-- footer start -->
     <footer>
-
-
+        <p>All rights copyright@2023 startup landing page design</p>
     </footer>
 <!-- footer end -->
     
